--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/core@1.10.0
+    - uses: actions/core@v1.10.0
 
     - name: Set Short github sha
       id: short-sha
