--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,8 +17,8 @@ jobs:
     - uses: actions/core@v1.10.0
 
     - name: Set Short github sha
-      id: short-sha
-      run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+      id: sha
+      run: echo "sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
     - name: Check outputs
-      run: echo ${{ steps.vars.outputs.sha_short }}
+      run: echo ${{ steps.sha.outputs.sha }}
